# python-typical-template

./: .envrc.example  .gitignore  README.md  pyproject.toml
src/dummy/: math.py
tests/: test_math.py
tools/: main.py
