[project]
authors = [{ name = "Your Name", email = "your_email@example.com" }]
name = "dummy"
version = "0.1.0"
description = "A Python project template"
requires-python = ">=3.11"
dependencies = [
    # "numpy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[tool.ruff]
line-length = 88
target-version = "py311"
lint.ignore = ["F401", 'E741']

[tool.ruff.lint.isort]
known-first-party = ["dummy"]

[tool.pytest.ini_options]
filterwarnings = []

[project.optional-dependencies]
dev = [
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "matplotlib>=3.10.7",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
    "mypy>=1.19.0",
]
